--- a/transition.css
+++ b/transition.css
@@ -1,4 +1,4 @@
-#intro-modal{
+.transition {
 	position: fixed;
 	z-index: 1000;
 	padding:10%;
@@ -7,10 +7,9 @@
 	box-sizing: border-box;
 	display: none;
 	line-height: 1.4em;
-   
     text-shadow: 0px 0px 1px rgba(0,0,0,0.4);
 }
-#intro-modal .bg{
+.transition .transition-bg{
 	opacity: 0.7;
 	width:100%;
 	height:100%;
@@ -18,12 +17,74 @@
 	top: 0;
 	left: 0;
 	z-index: 1;
-	 background-repeat: no-repeat;
-    background-size: auto 100%;
+	background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
 }
-#intro-modal .content{
+.transition .transition-content{
 	display: none;
 	position: relative;
 	z-index: 10;
+	color:#fff;
+	font-size:28px;
+	
+    line-height: 2em;
+}
+.transition.preview{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color:#000;
+    line-height: 1.7em;
+    padding:4%;
+}
+.transition.preview .transition-content{
+	display: block;
+	font-size:11px;
+}
+#transition-form {
+	min-height: 400px;
+	min-width: 500px;
+	max-width: 900px;
+	max-height: 90vh;
+}
+#transition-form .scroll {
+    height: 100%;
+    max-height: calc(600px - 72px);
+    margin-bottom: 5px;
+    overflow-y: scroll;
+    padding: 8px;
+}
+#transition-form .window-content{
+	padding: 0;
+}
+#transition-form .editor-box {
+	height: calc(100% - 131px);
+	margin-top: 10px;
+}
+#transition-form .editor {
+	height: 100%;
+	outline:1px solid rgba(0,0,0,0.8);
+}
+#transition-form .tox.tox-tinymce {
+	height: 100% !important;
+	min-height: 300px;
+}
+#transition-preview {
+	position: relative;
+	width: 100%;
+	max-width: 400px;
+	height: 68%;
+	max-height: 272px;
+	margin: 0px auto 20px;
+    outline: 1px solid;
+}
+
+
+/* DELETE THIS */
+.notification.error.permanent {
+	display: none !important;
 }
