Got rid of the the transition preview in the form and just moved it to the actual full size transition.

--- a/templates/transition-form.html
+++ b/templates/transition-form.html
@@ -2,8 +2,8 @@
     <div class="scroll">
         <h2>Scene Transition</h2>
         <!-- Preview? -->
-        <label>Preview</label>
-        <div id="transition-preview">
+        <!-- <label>Preview</label> -->
+        <!-- <div id="transition-preview">
             <div class="transition preview">
                 <div class="transition-bg"></div>
                 <div class="transition-content"></div>
@@ -11,7 +11,7 @@
                     <source src="">
                 </audio>
             </div>
-        </div>
+        </div> -->
         <!--- Background Image Upload -->
         <div class="form-group">
             <label>{{localize "SCENES.BackgroundImage"}}</label>
