--- a/templates/transition-form.html
+++ b/templates/transition-form.html
@@ -36,6 +36,14 @@
             </div>
         </div>
         <div class="form-group">
+            <label>Background Size</label>
+            <input type="text" name="bgSize" placeholder="cover" value="{{bgSize}}">
+        </div>
+        <div class="form-group">
+            <label>Background Position</label>
+            <input type="text" name="bgPos" placeholder="center center" value="{{bgPos}}">
+        </div>
+        <div class="form-group">
             <label>Font Size</label>
             <input type="text" name="fontSize" placeholder="28px" value="{{fontSize}}">
         </div>
