--- a/templates/transition-form.html
+++ b/templates/transition-form.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label>Background Opacity</label>
+            <label>Background Image Opacity</label>
             <div class="form-fields">
                 <input type="text" name="bgOpacity" placeholder="0.7" value="{{bgOpacity}}">
             </div>
