--- a/templates/transition-form.html
+++ b/templates/transition-form.html
@@ -72,6 +72,12 @@
                 <input class="image" type="text" name="audio" placeholder="path/audio.mp3" value="{{audio}}"/>
             </div>
         </div>
+        <div class="form-group">
+            <label>Volume</label>
+            <div class="form-fields">
+                <input name="volume" type="range" value="{{volume}}" min="0" max="1" step="0.1" data-dtype="Number"/>
+            </div>
+        </div>
 
     <!--- Options --->
         <h3 class="form-header">Options</h3>
