Major refactor, 0.8.3+ ready

--- a/templates/transition-form.html
+++ b/templates/transition-form.html
@@ -108,7 +108,7 @@
         </div>
         <div class="form-group">
             <label>Don't show other GM windows</label>
-            <input type="checkbox" name="hideGM" data-dtype="Boolean" {{checked hideGM}}/>
+            <input type="checkbox" name="gmHide" data-dtype="Boolean" {{checked gmHide}}/>
             <p class="notes">Don't show on other windows logged in as a GM.</p>
         </div>
     </div>
